// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover Component Snapshots > renders Tailwind Popover correctly 1`] = `
{
  "Popover.tsx": "import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
} from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
  FloatingFocusManager,
  FloatingPortal,
  FloatingArrow,
  arrow,
  useMergeRefs,
  limitShift,
} from '@floating-ui/react';

export type PopoverSize = 'sm' | 'md' | 'lg';
export type PopoverVariant = 'default' | 'minimal';

export interface PopoverOptions {
  initialOpen?: boolean;
  placement?: Placement;
  modal?: boolean;
  open?: boolean;
  onOpenChange?: (open: boolean) => void;
  trigger?: 'click' | 'hover';
  offset?: number;
}

export function usePopover({
  initialOpen = false,
  placement = 'bottom',
  modal = false,
  open: controlledOpen,
  onOpenChange: setControlledOpen,
  trigger = 'click',
  offset: offsetValue = 8,
}: PopoverOptions = {}) {
  const [uncontrolledOpen, setUncontrolledOpen] = useState(initialOpen);
  const [arrowElement, setArrowElement] = useState<SVGSVGElement | null>(null);

  const open = controlledOpen ?? uncontrolledOpen;
  const setOpen = useCallback(
    (open: boolean) => {
      if (controlledOpen === undefined) {
        setUncontrolledOpen(open);
      }
      setControlledOpen?.(open);
    },
    [controlledOpen, setControlledOpen]
  );

  const data = useFloating({
    placement,
    open,
    onOpenChange: setOpen,
    whileElementsMounted: autoUpdate,
    middleware: [
      offset(offsetValue),
      flip({
        fallbackAxisSideDirection: 'end',
        padding: 5,
      }),
      shift({ padding: 5, limiter: limitShift() }),
      arrow({
        element: arrowElement,
      }),
    ],
  });

  const context = data.context;

  const click = useClick(context, {
    enabled: trigger === 'click',
  });
  const hover = useHover(context, {
    enabled: trigger === 'hover',
    handleClose: safePolygon(),
  });
  const dismiss = useDismiss(context);
  const role = useRole(context);

  const interactions = useInteractions([click, hover, dismiss, role]);

  return useMemo(
    () => ({
      open,
      setOpen,
      ...interactions,
      ...data,
      modal,
      arrowElement,
      setArrowElement,
    }),
    [open, setOpen, interactions, data, modal, arrowElement]
  );
}

type ContextType = ReturnType<typeof usePopover> | null;

const PopoverContext = createContext<ContextType>(null);

const usePopoverContext = () => {
  const context = useContext(PopoverContext);
  if (context == null) {
    throw new Error("Popover components must be wrapped in <Popover.Root />");
  }
  return context;
};

const SIZE_CLASSES: Record<PopoverSize, string> = {
  sm: 'text-[0.8125rem] min-w-[200px] p-3',
  md: 'text-sm min-w-[18rem] p-4',
  lg: 'text-[0.9375rem] min-w-[22.5rem] p-5',
};

const VARIANT_CLASSES: Record<PopoverVariant, string> = {
  default:
    'border border-[var(--popover-border,var(--color-border))] shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1),0_2px_4px_-2px_rgba(0,0,0,0.1)]',
  minimal:
    'shadow-[0_4px_6px_-1px_rgba(0,0,0,0.08),0_2px_4px_-1px_rgba(0,0,0,0.04)]',
};

/**
 * Internal Popover Components
 */
const InternalRoot = ({
  children,
  ...options
}: {
  children: React.ReactNode;
} & PopoverOptions) => {
  const popover = usePopover(options);
  return (
    <PopoverContext.Provider value={popover}>
      {children}
    </PopoverContext.Provider>
  );
};

const InternalTrigger = React.forwardRef<
  HTMLElement,
  React.HTMLProps<HTMLElement> & { asChild?: boolean }
>(function PopoverTrigger({ children, asChild = false, className, ...props }, propRef) {
  const context = usePopoverContext();
  const childrenRef = (children as any).ref;
  const ref = useMergeRefs([context.refs.setReference, propRef, childrenRef]);

  if (asChild && React.isValidElement(children)) {
    return React.cloneElement(
      children,
      context.getReferenceProps({
        ref,
        ...props,
        ...children.props,
        "data-state": context.open ? "open" : "closed",
      })
    );
  }

  return (
    <button
      ref={ref}
      type="button"
      className={\`inline-flex items-center justify-center cursor-pointer focus:outline-none \${className || ''}\`}
      data-state={context.open ? "open" : "closed"}
      {...context.getReferenceProps(props)}
    >
      {children}
    </button>
  );
});

const InternalPortal = ({ children }: { children: React.ReactNode }) => (
  <FloatingPortal>{children}</FloatingPortal>
);

interface PopoverContentProps extends React.HTMLProps<HTMLDivElement> {
  size?: PopoverSize;
  variant?: PopoverVariant;
}

const InternalContent = React.forwardRef<HTMLDivElement, PopoverContentProps>(
  function PopoverContent(
    { style, className, children, size = 'md', variant = 'default', ...props },
    propRef
  ) {
    const { context: floatingContext, isPositioned, ...context } = usePopoverContext();
    const ref = useMergeRefs([context.refs.setFloating, propRef]);

    if (!floatingContext.open) return null;

    const side = floatingContext.placement.split('-')[0];

    return (
      <FloatingFocusManager context={floatingContext} modal={context.modal}>
        <div
          ref={ref}
          style={{
            position: floatingContext.strategy,
            top: floatingContext.y ?? 0,
            left: floatingContext.x ?? 0,
            visibility: isPositioned ? 'visible' : 'hidden',
            ...style,
          }}
          className={\`
            z-[var(--popover-z-index,50)] rounded-[var(--popover-radius,8px)] bg-[var(--popover-background,var(--color-surface,white))] text-[var(--color-text,#1A1A2E)] outline-none max-w-[calc(100vw-16px)]
            focus-visible:outline-2 focus-visible:outline-[var(--color-primary,#6C63FF)] focus-visible:outline-offset-2
            data-[state=open]:animate-in data-[state=open]:fade-in-0 data-[state=open]:zoom-in-95
            data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2
            \${SIZE_CLASSES[size]} \${VARIANT_CLASSES[variant]} \${className || ''}
          \`}
          data-state={context.open && isPositioned ? "open" : "closed"}
          data-placement={floatingContext.placement}
          data-side={side}
          tabIndex={-1}
          {...context.getFloatingProps(props)}
        >
          {children}
        </div>
      </FloatingFocusManager>
    );
  }
);

const InternalArrow = React.forwardRef<
  SVGSVGElement,
  React.SVGProps<SVGSVGElement>
>(function PopoverArrow({ className, ...props }, propRef) {
  const { context: floatingContext, setArrowElement } = usePopoverContext();
  const ref = useMergeRefs([setArrowElement, propRef]);

  return (
    <FloatingArrow
      ref={ref}
      context={floatingContext}
      className={\`fill-[var(--popover-background,var(--color-surface,white))] stroke-[var(--popover-border,var(--color-border))] \${className || ''}\`}
      strokeWidth={1}
      {...props}
    />
  );
});

const InternalClose = React.forwardRef<
  HTMLElement,
  React.ButtonHTMLAttributes<HTMLButtonElement> & { asChild?: boolean }
>(function PopoverClose({ asChild = false, children, onClick, ...props }, propRef) {
  const { setOpen } = usePopoverContext();
  const handleClick = (event: React.MouseEvent<any>) => {
    onClick?.(event as any);
    setOpen(false);
  };

  if (asChild && React.isValidElement(children)) {
    const childProps = (children as any).props as any;
    return React.cloneElement(children as any, {
      ref: propRef as any,
      ...props,
      ...childProps,
      onClick: (e: React.MouseEvent<any>) => {
        childProps.onClick?.(e);
        handleClick(e);
      },
    });
  }

  return (
    <button type="button" ref={propRef as any} {...props} onClick={handleClick}>
      {children}
    </button>
  );
});

export const PopoverRoot = InternalRoot;
export const PopoverTrigger = InternalTrigger;
export const PopoverPortal = InternalPortal;
export const PopoverContent = InternalContent;
export const PopoverArrow = InternalArrow;
export const PopoverClose = InternalClose;

/**
 * Popover - Main export with compound components
 */
export const Popover = Object.assign(PopoverRoot, {
  Root: PopoverRoot,
  Trigger: PopoverTrigger,
  Portal: PopoverPortal,
  Content: PopoverContent,
  Arrow: PopoverArrow,
  Close: PopoverClose,
});

export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --form-group-gap: calc(var(--spacing-unit) * 5);
  --form-item-gap: calc(var(--spacing-unit) * 1.5);
  --form-label-color: var(--color-text);
  --form-label-weight: 500;
  --form-required-color: var(--color-destructive);
  --form-control-height-sm: calc(var(--spacing-unit) * 9);
  --form-control-height-md: calc(var(--spacing-unit) * 10);
  --form-control-height-lg: calc(var(--spacing-unit) * 11);
  --form-error-color: var(--color-destructive);
  --form-description-color: var(--color-text-muted);
  --form-description-size: 0.75rem;
  --form-radius: var(--radius-md);
  --form-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --tooltip-background: var(--color-surface);
  --tooltip-border: var(--color-border);
  --tooltip-text: var(--color-text);
  --tooltip-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
  --tooltip-radius: var(--radius-md);
  --tooltip-padding: calc(var(--spacing-unit) * 2);
  --tooltip-z-index: 60;
  --toast-background: var(--color-surface);
  --toast-border: var(--color-border);
  --toast-text: var(--color-text);
  --toast-text-muted: var(--color-text-muted);
  --toast-radius: var(--radius-md);
  --toast-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --toast-padding: calc(var(--spacing-unit) * 4);
  --toast-gap: calc(var(--spacing-unit) * 2);
  --toast-z-index: 9999;
  --toast-success-bg: var(--color-success);
  --toast-error-bg: var(--color-destructive);
  --toast-warning-bg: #f59e0b;
  --toast-info-bg: var(--color-primary);
  --tabs-list-gap: calc(var(--spacing-unit) * 1);
  --tabs-trigger-height-sm: calc(var(--spacing-unit) * 8);
  --tabs-trigger-height-md: calc(var(--spacing-unit) * 9);
  --tabs-trigger-height-lg: calc(var(--spacing-unit) * 11);
  --tabs-trigger-padding-x: calc(var(--spacing-unit) * 3);
  --tabs-trigger-radius: var(--radius-md);
  --tabs-trigger-color: var(--color-text-muted);
  --tabs-trigger-active-color: var(--color-text);
  --tabs-trigger-hover-bg: var(--color-secondary);
  --tabs-trigger-active-bg: var(--color-surface);
  --tabs-trigger-active-indicator: var(--color-primary);
  --tabs-indicator-thickness: 2px;
  --tabs-content-padding-y: calc(var(--spacing-unit) * 4);
  --tabs-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;

exports[`Popover Component Snapshots > renders basic Popover correctly 1`] = `
{
  "Popover.module.css": ".trigger {
  all: unset;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.content {
  position: absolute;
  z-index: var(--popover-z-index, 50);
  background-color: var(--popover-background, var(--color-surface));
  color: var(--color-text, var(--foreground, #1A1A2E));
  border: 1px solid var(--popover-border, var(--color-border));
  border-radius: var(--popover-radius, var(--radius-md));
  box-shadow: var(
    --popover-shadow,
    0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -2px rgba(0, 0, 0, 0.1)
  );
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  outline: none;
  max-width: calc(100vw - 16px);
  transform-origin: var(--floating-ui-transform-origin);
}

.content:focus-visible {
  outline: 2px solid var(--color-primary, #6C63FF);
  outline-offset: 2px;
}

/* Variants */
.variant-default {
  /* uses defaults above */
}

.variant-minimal {
  border: none;
  box-shadow:
    0 4px 6px -1px rgba(0, 0, 0, 0.08),
    0 2px 4px -1px rgba(0, 0, 0, 0.04);
}

/* Sizes */
.size-sm {
  font-size: 0.8125rem;
  min-width: 200px;
  padding: 12px;
}

.size-md {
  font-size: 0.875rem;
  min-width: 288px;
  padding: 16px;
}

.size-lg {
  font-size: 0.9375rem;
  min-width: 360px;
  padding: 20px;
}

/* Animation — gated on data-state so it only runs after positioning settles */
.content[data-state='open'] {
  animation: popover-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
}

.content[data-state='open'][data-side='top'] {
  animation-name: popover-slide-down;
}
.content[data-state='open'][data-side='bottom'] {
  animation-name: popover-slide-up;
}
.content[data-state='open'][data-side='left'] {
  animation-name: popover-slide-right;
}
.content[data-state='open'][data-side='right'] {
  animation-name: popover-slide-left;
}

@keyframes popover-show {
  from {
    opacity: 0;
    transform: scale(0.96);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes popover-slide-up {
  from {
    opacity: 0;
    transform: translateY(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-down {
  from {
    opacity: 0;
    transform: translateY(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-left {
  from {
    opacity: 0;
    transform: translateX(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

@keyframes popover-slide-right {
  from {
    opacity: 0;
    transform: translateX(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

@media (prefers-reduced-motion: reduce) {
  .content[data-state='open'] {
    animation: none;
  }
}

.item {
  padding: 8px 12px;
  cursor: pointer;
  border-radius: 4px;
  transition: background-color 0.2s;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 0.875rem;
}

.item:hover {
  background-color: var(--color-accent, #f3f4f6);
}

.separator {
  height: 1px;
  background-color: var(--color-border, #e5e7eb);
  margin: 4px 0;
}
",
  "Popover.tsx": "import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
} from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
  FloatingFocusManager,
  FloatingPortal,
  FloatingArrow,
  arrow,
  useMergeRefs,
  limitShift,
} from '@floating-ui/react';
import styles from './Popover.module.css';
export type PopoverSize = 'sm' | 'md' | 'lg';
export type PopoverVariant = 'default' | 'minimal';

export interface PopoverOptions {
  initialOpen?: boolean;
  placement?: Placement;
  modal?: boolean;
  open?: boolean;
  onOpenChange?: (open: boolean) => void;
  trigger?: 'click' | 'hover';
  offset?: number;
}

export function usePopover({
  initialOpen = false,
  placement = 'bottom',
  modal = false,
  open: controlledOpen,
  onOpenChange: setControlledOpen,
  trigger = 'click',
  offset: offsetValue = 8,
}: PopoverOptions = {}) {
  const [uncontrolledOpen, setUncontrolledOpen] = useState(initialOpen);
  const [arrowElement, setArrowElement] = useState<SVGSVGElement | null>(null);

  const open = controlledOpen ?? uncontrolledOpen;
  const setOpen = useCallback(
    (open: boolean) => {
      if (controlledOpen === undefined) {
        setUncontrolledOpen(open);
      }
      setControlledOpen?.(open);
    },
    [controlledOpen, setControlledOpen]
  );

  const data = useFloating({
    placement,
    open,
    onOpenChange: setOpen,
    whileElementsMounted: autoUpdate,
    middleware: [
      offset(offsetValue),
      flip({
        fallbackAxisSideDirection: 'end',
        padding: 5,
      }),
      shift({ padding: 5, limiter: limitShift() }),
      arrow({
        element: arrowElement,
      }),
    ],
  });

  const context = data.context;

  const click = useClick(context, {
    enabled: trigger === 'click',
  });
  const hover = useHover(context, {
    enabled: trigger === 'hover',
    handleClose: safePolygon(),
  });
  const dismiss = useDismiss(context);
  const role = useRole(context);

  const interactions = useInteractions([click, hover, dismiss, role]);

  return useMemo(
    () => ({
      open,
      setOpen,
      ...interactions,
      ...data,
      modal,
      arrowElement,
      setArrowElement,
    }),
    [open, setOpen, interactions, data, modal, arrowElement]
  );
}

type ContextType = ReturnType<typeof usePopover> | null;

const PopoverContext = createContext<ContextType>(null);

const usePopoverContext = () => {
  const context = useContext(PopoverContext);
  if (context == null) {
    throw new Error("Popover components must be wrapped in <Popover.Root />");
  }
  return context;
};

/**
 * Internal Popover Components
 */
const InternalRoot = ({
  children,
  ...options
}: {
  children: React.ReactNode;
} & PopoverOptions) => {
  const popover = usePopover(options);
  return (
    <PopoverContext.Provider value={popover}>
      {children}
    </PopoverContext.Provider>
  );
};

const InternalTrigger = React.forwardRef<
  HTMLElement,
  React.HTMLProps<HTMLElement> & { asChild?: boolean }
>(function PopoverTrigger({ children, asChild = false, ...props }, propRef) {
  const context = usePopoverContext();
  const childrenRef = (children as any).ref;
  const ref = useMergeRefs([context.refs.setReference, propRef, childrenRef]);

  if (asChild && React.isValidElement(children)) {
    return React.cloneElement(
      children,
      context.getReferenceProps({
        ref,
        ...props,
        ...children.props,
        "data-state": context.open ? "open" : "closed",
      })
    );
  }

  return (
    <button
      ref={ref}
      type="button"
      className={styles.trigger}
      data-state={context.open ? "open" : "closed"}
      {...context.getReferenceProps(props)}
    >
      {children}
    </button>
  );
});

const InternalPortal = ({ children }: { children: React.ReactNode }) => (
  <FloatingPortal>{children}</FloatingPortal>
);

interface PopoverContentProps extends React.HTMLProps<HTMLDivElement> {
  size?: PopoverSize;
  variant?: PopoverVariant;
}

const InternalContent = React.forwardRef<HTMLDivElement, PopoverContentProps>(
  function PopoverContent(
    { style, className, children, size = 'md', variant = 'default', ...props },
    propRef
  ) {
    const { context: floatingContext, isPositioned, ...context } = usePopoverContext();
    const ref = useMergeRefs([context.refs.setFloating, propRef]);

    if (!floatingContext.open) return null;

    const side = floatingContext.placement.split('-')[0];

    return (
      <FloatingFocusManager context={floatingContext} modal={context.modal}>
        <div
          ref={ref}
          style={{
            position: floatingContext.strategy,
            top: floatingContext.y ?? 0,
            left: floatingContext.x ?? 0,
            visibility: isPositioned ? 'visible' : 'hidden',
            ...style,
          }}
          className={[
            styles.content,
            styles[\`size-\${size}\`],
            styles[\`variant-\${variant}\`],
            className,
          ]
            .filter(Boolean)
            .join(' ')}
          data-state={context.open && isPositioned ? "open" : "closed"}
          data-placement={floatingContext.placement}
          data-side={side}
          tabIndex={-1}
          {...context.getFloatingProps(props)}
        >
          {children}
        </div>
      </FloatingFocusManager>
    );
  }
);

const InternalArrow = React.forwardRef<
  SVGSVGElement,
  React.SVGProps<SVGSVGElement>
>(function PopoverArrow(props, propRef) {
  const { context: floatingContext, setArrowElement } = usePopoverContext();
  const ref = useMergeRefs([setArrowElement, propRef]);

  return (
    <FloatingArrow
      ref={ref}
      context={floatingContext}
      fill="var(--popover-background, var(--color-surface, white))"
      stroke="var(--popover-border, var(--color-border))"
      strokeWidth={1}
      {...props}
    />
  );
});

const InternalClose = React.forwardRef<
  HTMLElement,
  React.ButtonHTMLAttributes<HTMLButtonElement> & { asChild?: boolean }
>(function PopoverClose({ asChild = false, children, onClick, ...props }, propRef) {
  const { setOpen } = usePopoverContext();
  const handleClick = (event: React.MouseEvent<any>) => {
    onClick?.(event as any);
    setOpen(false);
  };

  if (asChild && React.isValidElement(children)) {
    const childProps = (children as any).props as any;
    return React.cloneElement(children as any, {
      ref: propRef as any,
      ...props,
      ...childProps,
      onClick: (e: React.MouseEvent<any>) => {
        childProps.onClick?.(e);
        handleClick(e);
      },
    });
  }

  return (
    <button type="button" ref={propRef as any} {...props} onClick={handleClick}>
      {children}
    </button>
  );
});

export const PopoverRoot = InternalRoot;
export const PopoverTrigger = InternalTrigger;
export const PopoverPortal = InternalPortal;
export const PopoverContent = InternalContent;
export const PopoverArrow = InternalArrow;
export const PopoverClose = InternalClose;

/**
 * Popover - Main export with compound components
 */
export const Popover = Object.assign(PopoverRoot, {
  Root: PopoverRoot,
  Trigger: PopoverTrigger,
  Portal: PopoverPortal,
  Content: PopoverContent,
  Arrow: PopoverArrow,
  Close: PopoverClose,
});

export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --form-group-gap: calc(var(--spacing-unit) * 5);
  --form-item-gap: calc(var(--spacing-unit) * 1.5);
  --form-label-color: var(--color-text);
  --form-label-weight: 500;
  --form-required-color: var(--color-destructive);
  --form-control-height-sm: calc(var(--spacing-unit) * 9);
  --form-control-height-md: calc(var(--spacing-unit) * 10);
  --form-control-height-lg: calc(var(--spacing-unit) * 11);
  --form-error-color: var(--color-destructive);
  --form-description-color: var(--color-text-muted);
  --form-description-size: 0.75rem;
  --form-radius: var(--radius-md);
  --form-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --tooltip-background: var(--color-surface);
  --tooltip-border: var(--color-border);
  --tooltip-text: var(--color-text);
  --tooltip-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
  --tooltip-radius: var(--radius-md);
  --tooltip-padding: calc(var(--spacing-unit) * 2);
  --tooltip-z-index: 60;
  --toast-background: var(--color-surface);
  --toast-border: var(--color-border);
  --toast-text: var(--color-text);
  --toast-text-muted: var(--color-text-muted);
  --toast-radius: var(--radius-md);
  --toast-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --toast-padding: calc(var(--spacing-unit) * 4);
  --toast-gap: calc(var(--spacing-unit) * 2);
  --toast-z-index: 9999;
  --toast-success-bg: var(--color-success);
  --toast-error-bg: var(--color-destructive);
  --toast-warning-bg: #f59e0b;
  --toast-info-bg: var(--color-primary);
  --tabs-list-gap: calc(var(--spacing-unit) * 1);
  --tabs-trigger-height-sm: calc(var(--spacing-unit) * 8);
  --tabs-trigger-height-md: calc(var(--spacing-unit) * 9);
  --tabs-trigger-height-lg: calc(var(--spacing-unit) * 11);
  --tabs-trigger-padding-x: calc(var(--spacing-unit) * 3);
  --tabs-trigger-radius: var(--radius-md);
  --tabs-trigger-color: var(--color-text-muted);
  --tabs-trigger-active-color: var(--color-text);
  --tabs-trigger-hover-bg: var(--color-secondary);
  --tabs-trigger-active-bg: var(--color-surface);
  --tabs-trigger-active-indicator: var(--color-primary);
  --tabs-indicator-thickness: 2px;
  --tabs-content-padding-y: calc(var(--spacing-unit) * 4);
  --tabs-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;

exports[`Popover Component Snapshots > renders monolithic Popover correctly 1`] = `
{
  "Popover.module.css": ".trigger {
  all: unset;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.content {
  position: absolute;
  z-index: var(--popover-z-index, 50);
  background-color: var(--popover-background, var(--color-surface));
  color: var(--color-text, var(--foreground, #1A1A2E));
  border: 1px solid var(--popover-border, var(--color-border));
  border-radius: var(--popover-radius, var(--radius-md));
  box-shadow: var(
    --popover-shadow,
    0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -2px rgba(0, 0, 0, 0.1)
  );
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  outline: none;
  max-width: calc(100vw - 16px);
  transform-origin: var(--floating-ui-transform-origin);
}

.content:focus-visible {
  outline: 2px solid var(--color-primary, #6C63FF);
  outline-offset: 2px;
}

/* Variants */
.variant-default {
  /* uses defaults above */
}

.variant-minimal {
  border: none;
  box-shadow:
    0 4px 6px -1px rgba(0, 0, 0, 0.08),
    0 2px 4px -1px rgba(0, 0, 0, 0.04);
}

/* Sizes */
.size-sm {
  font-size: 0.8125rem;
  min-width: 200px;
  padding: 12px;
}

.size-md {
  font-size: 0.875rem;
  min-width: 288px;
  padding: 16px;
}

.size-lg {
  font-size: 0.9375rem;
  min-width: 360px;
  padding: 20px;
}

/* Animation — gated on data-state so it only runs after positioning settles */
.content[data-state='open'] {
  animation: popover-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
}

.content[data-state='open'][data-side='top'] {
  animation-name: popover-slide-down;
}
.content[data-state='open'][data-side='bottom'] {
  animation-name: popover-slide-up;
}
.content[data-state='open'][data-side='left'] {
  animation-name: popover-slide-right;
}
.content[data-state='open'][data-side='right'] {
  animation-name: popover-slide-left;
}

@keyframes popover-show {
  from {
    opacity: 0;
    transform: scale(0.96);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes popover-slide-up {
  from {
    opacity: 0;
    transform: translateY(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-down {
  from {
    opacity: 0;
    transform: translateY(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@keyframes popover-slide-left {
  from {
    opacity: 0;
    transform: translateX(4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

@keyframes popover-slide-right {
  from {
    opacity: 0;
    transform: translateX(-4px) scale(0.96);
  }
  to {
    opacity: 1;
    transform: translateX(0) scale(1);
  }
}

@media (prefers-reduced-motion: reduce) {
  .content[data-state='open'] {
    animation: none;
  }
}

.item {
  padding: 8px 12px;
  cursor: pointer;
  border-radius: 4px;
  transition: background-color 0.2s;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 0.875rem;
}

.item:hover {
  background-color: var(--color-accent, #f3f4f6);
}

.separator {
  height: 1px;
  background-color: var(--color-border, #e5e7eb);
  margin: 4px 0;
}
",
  "Popover.tsx": "import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
} from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
  FloatingFocusManager,
  FloatingPortal,
  FloatingArrow,
  arrow,
  useMergeRefs,
  limitShift,
} from '@floating-ui/react';
import styles from './Popover.module.css';
export type PopoverSize = 'sm' | 'md' | 'lg';
export type PopoverVariant = 'default' | 'minimal';

export interface PopoverOptions {
  initialOpen?: boolean;
  placement?: Placement;
  modal?: boolean;
  open?: boolean;
  onOpenChange?: (open: boolean) => void;
  trigger?: 'click' | 'hover';
  offset?: number;
}

export function usePopover({
  initialOpen = false,
  placement = 'bottom',
  modal = false,
  open: controlledOpen,
  onOpenChange: setControlledOpen,
  trigger = 'click',
  offset: offsetValue = 8,
}: PopoverOptions = {}) {
  const [uncontrolledOpen, setUncontrolledOpen] = useState(initialOpen);
  const [arrowElement, setArrowElement] = useState<SVGSVGElement | null>(null);

  const open = controlledOpen ?? uncontrolledOpen;
  const setOpen = useCallback(
    (open: boolean) => {
      if (controlledOpen === undefined) {
        setUncontrolledOpen(open);
      }
      setControlledOpen?.(open);
    },
    [controlledOpen, setControlledOpen]
  );

  const data = useFloating({
    placement,
    open,
    onOpenChange: setOpen,
    whileElementsMounted: autoUpdate,
    middleware: [
      offset(offsetValue),
      flip({
        fallbackAxisSideDirection: 'end',
        padding: 5,
      }),
      shift({ padding: 5, limiter: limitShift() }),
      arrow({
        element: arrowElement,
      }),
    ],
  });

  const context = data.context;

  const click = useClick(context, {
    enabled: trigger === 'click',
  });
  const hover = useHover(context, {
    enabled: trigger === 'hover',
    handleClose: safePolygon(),
  });
  const dismiss = useDismiss(context);
  const role = useRole(context);

  const interactions = useInteractions([click, hover, dismiss, role]);

  return useMemo(
    () => ({
      open,
      setOpen,
      ...interactions,
      ...data,
      modal,
      arrowElement,
      setArrowElement,
    }),
    [open, setOpen, interactions, data, modal, arrowElement]
  );
}

type ContextType = ReturnType<typeof usePopover> | null;

const PopoverContext = createContext<ContextType>(null);

const usePopoverContext = () => {
  const context = useContext(PopoverContext);
  if (context == null) {
    throw new Error("Popover components must be wrapped in <Popover.Root />");
  }
  return context;
};

/**
 * Internal Popover Components
 */
const InternalRoot = ({
  children,
  ...options
}: {
  children: React.ReactNode;
} & PopoverOptions) => {
  const popover = usePopover(options);
  return (
    <PopoverContext.Provider value={popover}>
      {children}
    </PopoverContext.Provider>
  );
};

const InternalTrigger = React.forwardRef<
  HTMLElement,
  React.HTMLProps<HTMLElement> & { asChild?: boolean }
>(function PopoverTrigger({ children, asChild = false, ...props }, propRef) {
  const context = usePopoverContext();
  const childrenRef = (children as any).ref;
  const ref = useMergeRefs([context.refs.setReference, propRef, childrenRef]);

  if (asChild && React.isValidElement(children)) {
    return React.cloneElement(
      children,
      context.getReferenceProps({
        ref,
        ...props,
        ...children.props,
        "data-state": context.open ? "open" : "closed",
      })
    );
  }

  return (
    <button
      ref={ref}
      type="button"
      className={styles.trigger}
      data-state={context.open ? "open" : "closed"}
      {...context.getReferenceProps(props)}
    >
      {children}
    </button>
  );
});

const InternalPortal = ({ children }: { children: React.ReactNode }) => (
  <FloatingPortal>{children}</FloatingPortal>
);

interface PopoverContentProps extends React.HTMLProps<HTMLDivElement> {
  size?: PopoverSize;
  variant?: PopoverVariant;
}

const InternalContent = React.forwardRef<HTMLDivElement, PopoverContentProps>(
  function PopoverContent(
    { style, className, children, size = 'md', variant = 'default', ...props },
    propRef
  ) {
    const { context: floatingContext, isPositioned, ...context } = usePopoverContext();
    const ref = useMergeRefs([context.refs.setFloating, propRef]);

    if (!floatingContext.open) return null;

    const side = floatingContext.placement.split('-')[0];

    return (
      <FloatingFocusManager context={floatingContext} modal={context.modal}>
        <div
          ref={ref}
          style={{
            position: floatingContext.strategy,
            top: floatingContext.y ?? 0,
            left: floatingContext.x ?? 0,
            visibility: isPositioned ? 'visible' : 'hidden',
            ...style,
          }}
          className={[
            styles.content,
            styles[\`size-\${size}\`],
            styles[\`variant-\${variant}\`],
            className,
          ]
            .filter(Boolean)
            .join(' ')}
          data-state={context.open && isPositioned ? "open" : "closed"}
          data-placement={floatingContext.placement}
          data-side={side}
          tabIndex={-1}
          {...context.getFloatingProps(props)}
        >
          {children}
        </div>
      </FloatingFocusManager>
    );
  }
);

const InternalArrow = React.forwardRef<
  SVGSVGElement,
  React.SVGProps<SVGSVGElement>
>(function PopoverArrow(props, propRef) {
  const { context: floatingContext, setArrowElement } = usePopoverContext();
  const ref = useMergeRefs([setArrowElement, propRef]);

  return (
    <FloatingArrow
      ref={ref}
      context={floatingContext}
      fill="var(--popover-background, var(--color-surface, white))"
      stroke="var(--popover-border, var(--color-border))"
      strokeWidth={1}
      {...props}
    />
  );
});

const InternalClose = React.forwardRef<
  HTMLElement,
  React.ButtonHTMLAttributes<HTMLButtonElement> & { asChild?: boolean }
>(function PopoverClose({ asChild = false, children, onClick, ...props }, propRef) {
  const { setOpen } = usePopoverContext();
  const handleClick = (event: React.MouseEvent<any>) => {
    onClick?.(event as any);
    setOpen(false);
  };

  if (asChild && React.isValidElement(children)) {
    const childProps = (children as any).props as any;
    return React.cloneElement(children as any, {
      ref: propRef as any,
      ...props,
      ...childProps,
      onClick: (e: React.MouseEvent<any>) => {
        childProps.onClick?.(e);
        handleClick(e);
      },
    });
  }

  return (
    <button type="button" ref={propRef as any} {...props} onClick={handleClick}>
      {children}
    </button>
  );
});

/**
 * Popover - Monolithic wrapper for the compound components
 */
export const Popover: React.FC<PopoverOptions & { children: React.ReactNode }> = ({
  children,
  ...options
}) => {
  const childrenArray = React.Children.toArray(children);
  const trigger = childrenArray[0];
  const content = childrenArray.slice(1);

  return (
    <InternalRoot {...options}>
      <InternalTrigger asChild>{trigger}</InternalTrigger>
      <InternalPortal>
        <InternalContent>
          {content}
        </InternalContent>
      </InternalPortal>
    </InternalRoot>
  );
};

export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --form-group-gap: calc(var(--spacing-unit) * 5);
  --form-item-gap: calc(var(--spacing-unit) * 1.5);
  --form-label-color: var(--color-text);
  --form-label-weight: 500;
  --form-required-color: var(--color-destructive);
  --form-control-height-sm: calc(var(--spacing-unit) * 9);
  --form-control-height-md: calc(var(--spacing-unit) * 10);
  --form-control-height-lg: calc(var(--spacing-unit) * 11);
  --form-error-color: var(--color-destructive);
  --form-description-color: var(--color-text-muted);
  --form-description-size: 0.75rem;
  --form-radius: var(--radius-md);
  --form-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --tooltip-background: var(--color-surface);
  --tooltip-border: var(--color-border);
  --tooltip-text: var(--color-text);
  --tooltip-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
  --tooltip-radius: var(--radius-md);
  --tooltip-padding: calc(var(--spacing-unit) * 2);
  --tooltip-z-index: 60;
  --toast-background: var(--color-surface);
  --toast-border: var(--color-border);
  --toast-text: var(--color-text);
  --toast-text-muted: var(--color-text-muted);
  --toast-radius: var(--radius-md);
  --toast-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --toast-padding: calc(var(--spacing-unit) * 4);
  --toast-gap: calc(var(--spacing-unit) * 2);
  --toast-z-index: 9999;
  --toast-success-bg: var(--color-success);
  --toast-error-bg: var(--color-destructive);
  --toast-warning-bg: #f59e0b;
  --toast-info-bg: var(--color-primary);
  --tabs-list-gap: calc(var(--spacing-unit) * 1);
  --tabs-trigger-height-sm: calc(var(--spacing-unit) * 8);
  --tabs-trigger-height-md: calc(var(--spacing-unit) * 9);
  --tabs-trigger-height-lg: calc(var(--spacing-unit) * 11);
  --tabs-trigger-padding-x: calc(var(--spacing-unit) * 3);
  --tabs-trigger-radius: var(--radius-md);
  --tabs-trigger-color: var(--color-text-muted);
  --tabs-trigger-active-color: var(--color-text);
  --tabs-trigger-hover-bg: var(--color-secondary);
  --tabs-trigger-active-bg: var(--color-surface);
  --tabs-trigger-active-indicator: var(--color-primary);
  --tabs-indicator-thickness: 2px;
  --tabs-content-padding-y: calc(var(--spacing-unit) * 4);
  --tabs-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;
